// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label Label hidden renders 1`] = `
.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  display: block;
  width: 100%;
  margin: 0;
  color: #4f6f8f;
  position: absolute;
  width: 1px;
  height: 1px;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  font-weight: 700;
  font-size: 10px;
  line-height: 1.4;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

<div
  className="c0"
>
  <label
    className="c1"
    color="text.light"
    fontSize="10px"
    fontWeight={700}
    hidden={true}
    letterSpacing="0.2px"
  />
</div>
`;

exports[`Label Label nowrap renders 1`] = `
.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  display: block;
  width: 100%;
  margin: 0;
  color: #4f6f8f;
  white-space: nowrap;
  font-weight: 700;
  font-size: 10px;
  line-height: 1.4;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

<div
  className="c0"
>
  <label
    className="c1"
    color="text.light"
    fontSize="10px"
    fontWeight={700}
    letterSpacing="0.2px"
  />
</div>
`;

exports[`Label Label width renders 1`] = `
.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  display: block;
  width: 100%;
  margin: 0;
  color: #4f6f8f;
  white-space: nowrap;
  width: 50%;
  font-weight: 700;
  font-size: 10px;
  line-height: 1.4;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

<div
  className="c0"
>
  <label
    className="c1"
    color="text.light"
    fontSize="10px"
    fontWeight={700}
    letterSpacing="0.2px"
    width={0.5}
  />
</div>
`;

exports[`Label it renders 1`] = `
.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  display: block;
  width: 100%;
  margin: 0;
  color: #4f6f8f;
  font-weight: 700;
  font-size: 10px;
  line-height: 1.4;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

<div
  className="c0"
>
  <label
    className="c1"
    color="text.light"
    fontSize="10px"
    fontWeight={700}
    letterSpacing="0.2px"
  />
</div>
`;
